--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,11 @@ footer {
     text-align: center;
     display: inline-block;
     text-decoration: none;
-    border-radius: 100px; }
+    border-radius: 100px;
+    display: flex;
+    font-size: 20px;
+    border: 3px solid;
+    display: flex; }
 
 .comprometidos {
   padding: 40px;
@@ -353,7 +357,6 @@ footer {
   align-items: flex-start;
   justify-content: center;
   position: absolute;
-  justify-content: center;
   font-size: 30px;
   font-family: "area-normal",sans-serif;
   top: 20%;
@@ -427,39 +430,38 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 40px; }
+  gap: 40px;
+  padding-top: 20px; }
 
 .project-info {
-  text-align: left;
   width: 50%;
-  margin: 40px; }
+  margin: 20px;
+  box-sizing: border-box;
+  padding: 20px; }
   .project-info p {
-    margin: 5px 0;
+    margin: 10px;
+    line-height: 1.6;
     font-family: "area-extended", sans-serif;
     font-size: 20px; }
 
 .project-description {
   box-sizing: border-box;
-  margin: 40px 0 20px;
-  padding: 0 40px; }
+  padding: 20px; }
   .project-description p {
-    margin: 10px 0;
+    margin: 20px;
     font-family: "area-normal", sans-serif;
     font-size: 20px;
-    text-align: justify;
-    margin-left: 0;
-    margin-right: 0;
-    margin: 10px 0; }
+    text-align: justify; }
 
 .izquierda img {
   display: block;
   width: 90%;
-  margin: 0 auto 40px 40px; }
+  margin: 0 auto 20px; }
 
 .derecha img {
   display: block;
   width: 90%;
-  margin: 40px auto 40px 0; }
+  margin: 40px auto 20px; }
 
 .proximoProyecto, .descrubreS {
   padding: 40px;
@@ -472,16 +474,23 @@ footer {
 @media (max-width: 425px) {
   header {
     justify-content: center;
+    flex-direction: row;
+    padding: 5px; }
+  .logoAndIcons {
+    display: flex;
     flex-direction: column;
-    padding: 0 5px; }
-  .logoAndIcons, .socialMedia {
+    justify-content: center;
+    align-items: center;
+    gap: 8px; }
+  .socialMedia {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
     gap: 8px; }
   .navBar ul {
-    flex-direction: row;
-    font-size: 13px;
+    flex-direction: column;
+    font-size: 16px;
     font-weight: bold;
     gap: 10px; }
   .navBar ul li {
@@ -491,12 +500,12 @@ footer {
     flex-direction: column;
     height: auto;
     align-items: center; }
-  .infoEstudio {
-    font-size: 8px;
-    align-items: center;
-    justify-content: center; }
-  .btnHablemos {
-    display: none; }
+    footer .infoEstudio {
+      font-size: 14px;
+      align-items: center;
+      justify-content: center; }
+    footer .btnHablemos {
+      display: none; }
   .sectionImage {
     background-position: center;
     background-size: cover;
@@ -508,16 +517,16 @@ footer {
     width: auto;
     min-height: auto; }
     .sectionImage h1 {
-      font-size: 16px;
+      font-size: 24px;
       font-weight: bold;
       padding: 7px;
       text-align: center; }
     .sectionImage div a {
-      font-size: 13px;
-      padding: 2px 5px;
+      font-size: 16px;
+      padding: 5px 15px;
       border: 2px solid white; }
   .divDise {
-    font-size: 12px;
+    font-size: 16px;
     padding: 10px; }
   .serviciosLanding,
   .nuestrosServicios {
@@ -525,12 +534,13 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 8px;
     margin-left: 5px; }
     .serviciosLanding a,
     .nuestrosServicios a {
-      font-size: 12px;
-      padding: 2px;
+      font-size: 16px;
+      padding: 5px 15px;
+      border: 2px solid black;
       width: auto;
       height: auto; }
   .enriqueciendoTotal {
@@ -539,10 +549,10 @@ footer {
   .enriqueciendo {
     padding: 16px; }
     .enriqueciendo h2 {
-      font-size: 16px;
+      font-size: 20px;
       margin: 0 0 10px; }
     .enriqueciendo p {
-      font-size: 12px;
+      font-size: 16px;
       justify-content: center; }
   .enriqueciendoTotal div img {
     margin-top: 10px;
@@ -551,20 +561,13 @@ footer {
     gap: 10px;
     padding: 30px; }
     .botonesPN a {
-      color: black;
-      background: 12px;
-      border: 2px solid 4px;
-      padding: 10px 20px;
-      font-family: "area-normal", sans-serif;
-      font-weight: bold;
-      text-align: center;
-      display: inline-block;
-      text-decoration: none;
-      border-radius: 100px;
+      font-size: 16px;
+      padding: 5px 15px;
+      border: 2px solid black;
       width: auto;
       height: auto; }
   .comprometidos h3 {
-    font-size: 16px;
+    font-size: 18px;
     margin-bottom: 20px; }
   .comprometidosParent {
     flex-direction: column; }
@@ -572,7 +575,7 @@ footer {
       width: 100%;
       padding-left: 0; }
       .comprometidosParent div p {
-        font-size: 14px;
+        font-size: 16px;
         margin-bottom: 20px; }
     .comprometidosParent img {
       margin: 0 auto;
@@ -580,41 +583,108 @@ footer {
   .serviciosDescripcion {
     padding: 10px; }
     .serviciosDescripcion p {
-      font-size: 12px;
+      font-size: 16px;
       line-height: 1.2; }
   .serviciosIndex {
     grid-template-columns: 1fr;
     grid-template-areas: "Servicios1" "Servicios2" "Servicios3" "Servicios4";
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+    gap: 15px; }
     .serviciosIndex .Servicios1, .serviciosIndex .Servicios2, .serviciosIndex .Servicios3, .serviciosIndex .Servicios4 {
-      max-width: 90%;
+      width: 100%;
+      max-width: 300px;
+      margin: 0 auto;
+      padding: 10px;
       height: auto; }
+      .serviciosIndex .Servicios1 img, .serviciosIndex .Servicios2 img, .serviciosIndex .Servicios3 img, .serviciosIndex .Servicios4 img {
+        width: 100%;
+        height: auto;
+        max-width: 280px; }
     .serviciosIndex h2 {
       padding: 5px 10px;
-      font-size: 12px;
+      font-size: 18px;
       margin-top: 5px; }
-  .proximoProyecto {
+  .proximoProyecto, .descrubreS {
     padding: 20px; }
-    .proximoProyecto a {
-      font-size: 10px;
+    .proximoProyecto a, .descrubreS a {
+      font-size: 16px;
       margin: 0; }
-    .proximoProyecto img {
+    .proximoProyecto img, .descrubreS img {
       width: 10px;
       height: auto;
       align-items: center; }
   .projectBackground {
-    height: 70vh; }
+    height: 90vh; }
   .projectList {
-    width: 150px;
+    width: auto;
     height: auto;
     display: flex;
-    margin-left: 20px;
-    font-size: 18px;
-    position: relative;
-    top: 20%;
-    left: 25px;
-    padding: 10px;
-    margin-bottom: 20%; } }
+    text-align: center;
+    font-size: 26px;
+    position: absolute;
+    padding: 25px; }
+  .seccionPrincipal div img {
+    display: block;
+    width: 90%;
+    margin: 0 auto; }
+  .projectDivision {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0px; }
+  .project-info {
+    width: 100%;
+    margin: 10px; }
+    .project-info p {
+      font-size: 16px; }
+  .project-description {
+    margin: 0 0 10px;
+    padding: 0 10px; }
+    .project-description p {
+      font-size: 16px;
+      margin: 10px 20px;
+      line-height: 1.6; }
+  .izquierda img, .derecha img {
+    display: block;
+    width: 80%;
+    margin: 20px auto; }
+  .equipoLanders,
+  .arqCoo,
+  .restTeam {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    gap: 0;
+    padding: 0; }
+    .equipoLanders h1,
+    .arqCoo h1,
+    .restTeam h1 {
+      font-size: 24px; }
+    .equipoLanders p,
+    .arqCoo p,
+    .restTeam p {
+      font-size: 16px;
+      width: 80%;
+      padding-bottom: 20px;
+      line-height: 1.6; }
+  .equipoLanders h1 {
+    margin-bottom: 10px; }
+  .arqCoo article,
+  .restTeam article {
+    width: 100%; }
+    .arqCoo article img,
+    .restTeam article img {
+      width: 100%;
+      height: auto; }
+    .arqCoo article h2,
+    .restTeam article h2 {
+      font-size: 22px; }
+    .arqCoo article p,
+    .restTeam article p {
+      font-size: 16px; } }
 
 @media (min-width: 426px) and (max-width: 768px) {
   header {
@@ -634,13 +704,13 @@ footer {
   footer {
     padding: 0 3px; }
     footer .infoEstudio {
-      font-size: 13px;
+      font-size: 16px;
       align-items: center;
       justify-content: center; }
     footer .btnHablemos {
       padding-bottom: 2px; }
       footer .btnHablemos a {
-        font-size: 13px;
+        font-size: 16px;
         padding: 5px 20px;
         border-width: 1px; }
   .sectionImage {
@@ -654,7 +724,7 @@ footer {
     width: auto;
     min-height: auto; }
     .sectionImage h1 {
-      font-size: 20px;
+      font-size: 28px;
       text-align: right;
       padding: 10px; }
     .sectionImage div a {
@@ -662,7 +732,7 @@ footer {
       padding: 4px 10px;
       border: 2px solid white; }
   .divDise {
-    font-size: 16px;
+    font-size: 18px;
     padding: 12px; }
   .serviciosLanding {
     display: flex;
@@ -695,10 +765,10 @@ footer {
   .enriqueciendo {
     padding: 20px; }
     .enriqueciendo h2 {
-      font-size: 20px;
+      font-size: 22px;
       margin: 20px 0 13px; }
     .enriqueciendo p {
-      font-size: 16px;
+      font-size: 18px;
       text-align: justify;
       padding: 0 10px;
       justify-content: center; }
@@ -719,7 +789,7 @@ footer {
       width: auto;
       height: auto; }
   .comprometidos h3 {
-    font-size: 20px;
+    font-size: 24px;
     margin-bottom: 23px; }
   .comprometidosParent {
     flex-direction: column; }
@@ -727,7 +797,7 @@ footer {
       width: 100%;
       padding-left: 0; }
       .comprometidosParent div p {
-        font-size: 16px;
+        font-size: 18px;
         margin-bottom: 20px; }
     .comprometidosParent img {
       margin: 0 auto;
@@ -735,41 +805,101 @@ footer {
   .serviciosDescripcion {
     padding: 10px; }
     .serviciosDescripcion p {
-      font-size: 16px;
+      font-size: 18px;
       line-height: 1.1; }
   .serviciosIndex {
-    grid-template-columns: 1fr;
-    grid-template-areas: "Servicios1" "Servicios2" "Servicios3" "Servicios4";
     margin-bottom: 15px; }
     .serviciosIndex .Servicios1, .serviciosIndex .Servicios2, .serviciosIndex .Servicios3, .serviciosIndex .Servicios4 {
-      max-width: 90%;
+      width: 100%;
+      max-width: 340px;
+      margin: 0 auto;
+      padding: 10px;
       height: auto; }
+      .serviciosIndex .Servicios1 img, .serviciosIndex .Servicios2 img, .serviciosIndex .Servicios3 img, .serviciosIndex .Servicios4 img {
+        width: 100%;
+        height: auto;
+        max-width: 3400px; }
     .serviciosIndex h2 {
       padding: 5px 10px;
-      font-size: 16px;
+      font-size: 22px;
       margin-top: 5px; }
-  .proximoProyecto {
+  .proximoProyecto, .descrubreS {
     padding: 20px; }
-    .proximoProyecto a {
-      font-size: 14px;
+    .proximoProyecto a, .descrubreS a {
+      font-size: 18px;
       margin: 0; }
-    .proximoProyecto img {
-      width: 15px;
+    .proximoProyecto img, .descrubreS img {
+      width: 16px;
       height: auto;
       align-items: center; }
   .projectBackground {
-    height: 70vh; }
+    height: 80vh; }
   .projectList {
-    width: 200px;
+    width: 300px;
     height: auto;
     display: flex;
     margin-left: 20px;
-    font-size: 18px;
-    position: relative;
-    top: 20%;
+    text-align: center;
+    font-size: 28px;
+    position: absolute;
     left: 25px;
+    padding: 10px; }
+  .projectDivision {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0px; }
+  .project-info {
+    width: 100%;
+    margin: 0;
     padding: 10px;
-    margin-bottom: 20%; } }
+    box-sizing: border-box; }
+    .project-info p {
+      font-size: 16px; }
+  .project-description {
+    margin: 0 0 10px;
+    padding: 0 10px;
+    width: 100%;
+    box-sizing: border-box; }
+    .project-description p {
+      font-size: 18px;
+      margin: 10px 25px;
+      line-height: 1.6; }
+  .izquierda img, .derecha img {
+    display: block;
+    width: 80%;
+    margin: 25px auto; }
+  .equipoLanders,
+  .arqCoo,
+  .restTeam {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px; }
+    .equipoLanders h1,
+    .arqCoo h1,
+    .restTeam h1 {
+      font-size: 28px; }
+    .equipoLanders p,
+    .arqCoo p,
+    .restTeam p {
+      font-size: 18px;
+      width: 80%; }
+  .arqCoo article,
+  .restTeam article {
+    width: 100%; }
+    .arqCoo article img,
+    .restTeam article img {
+      width: 100%;
+      height: auto; }
+    .arqCoo article h2,
+    .restTeam article h2 {
+      font-size: 22px; }
+    .arqCoo article p,
+    .restTeam article p {
+      font-size: 18px; } }
 
 @media (min-width: 769px) {
   .enriqueciendoTotal {
