--- a/scss/layout/_landing.scss
+++ b/scss/layout/_landing.scss
@@ -83,6 +83,10 @@
 
   a {
     @include button-style(map-get($colors, white), map-get($colors, black), map-get($colors, black));
+    display: flex;
+    font-size: 20px;
+    border: 3px solid;
+    display: flex;
   }
 }
 
